feat: add link to home on admin pages

--- a/Views/AdminProductLabelModel/Delete.cshtml
+++ b/Views/AdminProductLabelModel/Delete.cshtml
@@ -8,6 +8,10 @@
 <div class="container">
     <div class="text-center">
 
+        <div class="linkcontainer">
+            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+        </div>
+
         <h1>Supprimer la relation Produit/Label</h1>
 
         <h2>Etes-vous sur de vouloir supprimer cette relation ?</h2>
