--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -22,7 +22,7 @@
                 <nav>
                     <ul>
                         <li><a href="~/AdminEventModel">Les évènements</a></li>
-                        <li><a href="~/adminproductmodel">Le Menu</a></li>
+                        <li><a href="~/adminproductmodel">Le menu</a></li>
                         <li><a href="~/adminlabelmodel">Les labels</a></li>
                         <li><a href="~/admintypemodel">Les types</a></li>
                         <li><a href="~/adminproductlabelmodel">Les relations Produit/Label</a></li>
