--- a/Views/AdminEventModel/Create.cshtml
+++ b/Views/AdminEventModel/Create.cshtml
@@ -8,6 +8,10 @@
 <div class="container">
     <div class="text-center">
 
+        <div class="linkcontainer">
+            <a href="@Url.Action("Events", "Home")" class="btn link">Voir les évènements</a>
+        </div>
+
         <h1>Ajouter un évènement</h1>
 
         <hr />
