--- a/Views/AdminEventModel/Delete.cshtml
+++ b/Views/AdminEventModel/Delete.cshtml
@@ -8,6 +8,10 @@
 <div class="container">
     <div class="text-center">
 
+        <div class="linkcontainer">
+            <a href="@Url.Action("Events", "Home")" class="btn link">Voir les évènements</a>
+        </div>
+
         <h1>Supprimer l'évènement</h1>
 
         <h2>Etes-vous sur de vouloir supprimer cet évènement ?</h2>
