--- a/Views/AdminEventModel/Index.cshtml
+++ b/Views/AdminEventModel/Index.cshtml
@@ -8,13 +8,17 @@
 <div class="container">
     <div class="text-center">
 
+        <div class="linkcontainer">
+            <a href="@Url.Action("Events", "Home")" class="btn link">Voir les évènements</a>
+        </div>
+
         <h1>Evènements</h1>
 
         <p>
             <a asp-action="Create" class="btn btn-admin">Ajouter un évènement</a>
         </p>
 
-        <table class="w-100">
+        <table class="table">
             <thead>
                 <tr>
                     <th>
