--- a/Views/AdminLabelModel/Index.cshtml
+++ b/Views/AdminLabelModel/Index.cshtml
@@ -7,6 +7,10 @@
 
 <div class="container">
     <div class="text-center">
+        
+        <div class="linkcontainer">
+            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+        </div>
 
         <h1>Labels</h1>
 
