--- a/Views/AdminProductLabelModel/Create.cshtml
+++ b/Views/AdminProductLabelModel/Create.cshtml
@@ -8,7 +8,11 @@
 <div class="container">
     <div class="text-center">
 
-        <h1>Créer une nouvelle relation Produit/Label</h1>
+        <div class="linkcontainer">
+            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+        </div>
+
+        <h1>Attribuer un label à un produit</h1>
 
         <hr />
         <div class="row">
