--- a/Views/AdminProductLabelModel/Edit.cshtml
+++ b/Views/AdminProductLabelModel/Edit.cshtml
@@ -1,12 +1,16 @@
 @model LaCroute.Models.ProductLabelModel
 
 @{
-    ViewData["Title"] = "Edit";    
+    ViewData["Title"] = "Edit";
     Layout = "_LayoutAdmin";
 }
 
 <div class="container">
     <div class="text-center">
+
+        <div class="linkcontainer">
+            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+        </div>
 
         <h1>Editer la relation Produit/Label</h1>
 
