--- a/Views/AdminProductLabelModel/Index.cshtml
+++ b/Views/AdminProductLabelModel/Index.cshtml
@@ -8,10 +8,14 @@
 <div class="container">
     <div class="text-center">
 
+        <div class="linkcontainer">
+            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+        </div>
+
         <h1>Relations Produit/Label</h1>
 
         <p>
-            <a asp-action="Create" class="btn btn-admin">Créer une nouvelle relation</a>
+            <a asp-action="Create" class="btn btn-admin">Attribuer un label à un produit</a>
         </p>
 
         <table class="table">
