--- a/Views/AdminReviewModel/Delete.cshtml
+++ b/Views/AdminReviewModel/Delete.cshtml
@@ -8,6 +8,10 @@
 <div class="container">
     <div class="text-center">
 
+        <div class="linkcontainer">
+            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+        </div>
+
         <h1>Supprimer l'avis</h1>
 
         <h2>Etes-vous sur de vouloir supprimer cet avis ?</h2>
