--- a/Views/AdminReviewModel/Edit.cshtml
+++ b/Views/AdminReviewModel/Edit.cshtml
@@ -8,6 +8,10 @@
 <div class="container">
     <div class="text-center">
 
+        <div class="linkcontainer">
+            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+        </div>
+
         <h1>Editer l'avis</h1>
 
         <hr />
