--- a/Views/AdminTypeModel/Delete.cshtml
+++ b/Views/AdminTypeModel/Delete.cshtml
@@ -8,6 +8,10 @@
 <div class="container">
     <div class="text-center">
 
+        <div class="linkcontainer">
+            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+        </div>
+
         <h1>Supprimer le type</h1>
 
         <h2>Etes-vous sur de vouloir supprimer ce type ?</h2>
