style: :lipstick: anchor links and smooth scroll behavior

--- a/Views/Home/_Concept.cshtml
+++ b/Views/Home/_Concept.cshtml
@@ -1,4 +1,4 @@
-<div class="container container-concept">
+<div class="container container-concept" id="concept">
     <div class="row d-flex justify-content-around gx-md-6 align-items-center">
         <div class="col-12 col-md-6 d-flex align-items-center">
             <>
