--- a/Views/Home/_Team.cshtml
+++ b/Views/Home/_Team.cshtml
@@ -1,9 +1,9 @@
 <div id="bg-team">
-	<div class="container m-container">
+	<div class="container m-container" id="equipe">
 		<div class="row d-flex justify-content-around gx-md-6 align-items-center">
 			<div class="col-12 col-md-6 py-2">
-				
-					<h3>Bonjour et bienvenue à tous !</h3><br><br>
+
+				<h3>Bonjour et bienvenue à tous !</h3><br><br>
 				<p>
 					Nous sommes ravis de vous présenter notre équipe unique et passionnée qui se cache derrière "La
 					Croute",
@@ -33,26 +33,29 @@
 					passion avec vous. Préparez-vous à découvrir le pâté comme vous ne l'avez jamais goûté auparavant !
 					<br><br>
 					À très bientôt, à "La Croute" !
-				</p> *@
+					</p> *@
 
 			</div>
 			<div class="col-12 col-md-6 d-flex align-items-center">
 				<div id="carouselTeam" class="carousel slide carousel-fade" data-bs-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="https://picsum.photos/seed/cuisine/640/600" class="d-block w-100 img-fluid" alt="...">
+							<img src="https://picsum.photos/seed/cuisine/640/600" class="d-block w-100 img-fluid"
+								alt="...">
 							<div class="carousel-caption d-none d-md-block">
 								<h5>First slide label</h5>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="https://picsum.photos/seed/equipe/640/600" class="d-block w-100 img-fluid" alt="...">
+							<img src="https://picsum.photos/seed/equipe/640/600" class="d-block w-100 img-fluid"
+								alt="...">
 							<div class="carousel-caption d-none d-md-block">
 								<h5>Second slide label</h5>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="https://picsum.photos/seed/baston/640/600" class="d-block w-100 img-fluid" alt="...">
+							<img src="https://picsum.photos/seed/baston/640/600" class="d-block w-100 img-fluid"
+								alt="...">
 							<div class="carousel-caption d-none d-md-block">
 								<h5>Third slide label</h5>
 							</div>
