--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -57,7 +57,7 @@
         <div class="navbar-header-right">
             <a class="navbar-header-link" asp-area="" asp-controller="Book" asp-action="booking">Réserver</a>
             <a class="navbar-header-link" href="/#events" onclick="scrollToAnchor(event, '#events')">Les évènements</a>
-            <a class="navbar-header-link" href="#footer" onclick="scrollToAnchor(event, '#footer')">Contact</a>
+            <a class="navbar-header-link" href="#footer">Nous trouver</a>
         </div>
         <partial class="connect-button" name="_LoginPartial" />
 
@@ -78,8 +78,7 @@
                 <li class="navbar-burger-item"><a href="/#events"
                         onclick=" closeBurgerMenu(); scrollToAnchor(event, '#events')">Les
                         évènements</a></li>
-                <li class="navbar-burger-item"><a href="#footer"
-                        onclick="closeBurgerMenu(); scrollToAnchor(event, '#footer')">Nous trouver</a>
+                <li class="navbar-burger-item"><a href="#footer" onclick="closeBurgerMenu()">Nous trouver</a>
                 </li>
             </ul>
         </div>
