--- a/Views/Shared/Footer/_Footer-review.cshtml.css
+++ b/Views/Shared/Footer/_Footer-review.cshtml.css
@@ -37,6 +37,10 @@
     color: orange; 
 }
 
+.btn-pistache{
+    background-color: var(--pistache);
+}
+
 @media screen and (max-width: 1450px) {
     .Review-Carousel {
         width: 80%;
