--- a/Views/Shared/Footer/_Footer-map.cshtml
+++ b/Views/Shared/Footer/_Footer-map.cshtml
@@ -1,8 +1,8 @@
 <div class="footer-map-container">
         <h1>Où nous trouver</h1>
-        <iframe class="map-iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas"
-                src="https://maps.google.com/maps?amp;hl=en&amp;q=47%20Rue%20Barth%C3%A9l%C3%A9my%20Delespaul%20Lille+(La%20Cro%C3%BBte)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-        <a href='http://maps-generator.com/fr'>Map Generator</a>
-        <script type='text/javascript'
-                src='https://embedmaps.com/google-maps-authorization/script.js?id=1d96fc8de80ac474061c6a2dc1df44534a4cbcfa'></script>
+        <iframe class="map-iframe"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10124.643974643037!2d3.059084!3d50.624126!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d59a2ec70a9d%3A0x9cc0534d2e260ce7!2s47%20Rue%20Barth%C3%A9l%C3%A9my%20Delespaul%2C%2059000%20Lille%2C%20France!5e0!3m2!1sfr!2sus!4v1704962231467!5m2!1sfr!2sus"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+       
 </div>
