--- a/Views/Home/_Concept.cshtml
+++ b/Views/Home/_Concept.cshtml
@@ -1,36 +1,5 @@
-@* <div class="container-concept mx-auto">
-<div class="row concept-row align-items-center justify-content-center">
-<div class="col-md-6">
-<div class="concept position-relative">
-<img class="p-3 concept-image" src="~/img/pateencroute.webp" />
-<div class="concept-slogan">
-Paté subversif <br>
-Convives épatés<br>
-Joie de vivre et patés
-</div>
-</div>
-</div>
-<div class="col-md-6">
-<div class="concept-text text-md-right">
-<h2>Pourquoi la Croute ? Pourquoi Patésserie</h2>
-<p>
-Découvrez l'ultime paradis des amateurs de pâté, niché au cœur de notre charmante ville. "La Croûte"
-est bien plus qu'un simple restaurant; c'est une expérience gastronomique dédiée à célébrer l'art du
-pâté sous toutes ses formes.
-<br><br>
-Notre menu, méticuleusement conçu par des chefs passionnés, met en vedette une variété exquise de
-pâtés, allant des classiques aux créations contemporaines. Parce que "La-Croûte" est un lieu de
-partage, notre menu propose également des spécialités pour l'apéritif végétarienne et sans porc.
-Chaque bouchée est une invitation à un voyage gustatif inégalé, où les saveurs se mêlent avec
-harmonie pour éveiller vos papilles.
-</p>
-</div>
-</div>
-</div>
-</div> *@
-
-<div class="container-concept">
-    <div class="row justify-content-md-center align-items-center mb-5">
+<div class="container-concept" id="concept">
+    <div class="concept-description row justify-content-md-center align-items-center">
         <div class="col-md-auto container-left">
             <img class="px-3 concept-image" src="~/img/pateencroute.webp" />
             <div class="concept-slogan">
@@ -62,4 +31,12 @@ harmonie pour éveiller vos papilles.
                 harmonie pour éveiller vos papilles.
             </p>
         </div>
+
+    </div>
+    <div class="col-md-12 text-center bouton-reserver">
+        <a class="mx-auto " asp-area="" asp-controller="Book" asp-action="booking">
+            <button class="btn booking-button" id="button-concept">
+                Réserver
+            </button>
+        </a>
     </div>
