--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -91,6 +91,19 @@ h2 {
   margin-inline: auto !important;
 }
 
+.booking-button {
+  background-color: var(--cacahuete);
+  padding: 0.3rem 1rem;
+  color: var(--couenne);
+  font-size: x-large;
+  font-family: VT323;
+  
+}
+
+.booking-button a {
+  margin-inline: auto;
+}
+
 @media  screen and (max-width: 800px) {
   .concept-image {
     max-width: 100% !important;
