--- a/Views/Review/Review.cshtml
+++ b/Views/Review/Review.cshtml
@@ -33,8 +33,8 @@
 }
 
 <div class="container">
-    <div class="row d-flex justify-content-center pb-5">
-        <div class="col-6 col-md-6 bg-terrine border border-color rounded">
+    <div class="row d-flex justify-content-center pb-5 gx-5">
+        <div class="col-12 col-md-6 bg-terrine border border-color rounded">
             <form asp-action="Review" method="post" class="p-5 ">
                 <div class="row d-flex justify-content-center bg-">
                     <h2 class="text-center">Donnez votre avis!</h2>
@@ -43,36 +43,77 @@
                     <div class="input-group mb-3 col-md-6">
                         <span class="input-group-text" id="basic-addon1">Prénom</span>
                         <input type="text" id="Name" name="Name" id="Name" asp-for="Name" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
+                        
                     </div>
+
+                    @if (ViewData.ModelState.TryGetValue("Name", out var nameErrors) &&
+                        nameErrors.Errors.Any())
+                        {
+                            <div class="alert alert-danger mb-3" role="alert">
+                                @foreach (var error in nameErrors.Errors)
+                                {
+                                    <span class="text-danger">@error.ErrorMessage</span>
+                                }
+                            </div>
+                        }
                     <div class="input-group mb-3 col-md-6">
                         <span class="input-group-text" id="basic-addon1">Titre</span>
                         <input type="text" id="Title" name="Title" id="Title" asp-for="Title" />
-                        <span asp-validation-for="Title" class="text-danger"></span>
+                        
                     </div>
+                    @if (ViewData.ModelState.TryGetValue("Title", out var titleErrors) &&
+                        titleErrors.Errors.Any())
+                        {
+                            <div class="alert alert-danger mb-3" role="alert">
+                                @foreach (var error in titleErrors.Errors)
+                                {
+                                    <span class="text-danger">@error.ErrorMessage</span>
+                                }
+                            </div>
+                        }
                     <div class="form-group col-md-6"></div>
                     <div class="row pb-2">
                         <div class="input-group mb-3 col-md-6">
                             <span class="input-group-text" id="basic-addon1">Note</span>
-                            <span asp-validation-for="Rating" class="text-danger"></span>
-                            <div id="rating-container" class="bg-white border border-secondary2 p-rating" >
+                            <div id="rating-container" class="bg-white border border-secondary2 p-rating">
                                 @for (int i = 1; i <= 5; i++)
                                 {
                                     <span class="star" data-value="@i">&#9733;</span>
                                 }
                             </div>
                         </div>
-
-                        <input type="hidden" asp-for="Rating" id="noteInput" />
+                        
                     </div>
+                    @if (ViewData.ModelState.TryGetValue("Rating", out var ratingErrors) &&
+                        ratingErrors.Errors.Any())
+                        {
+                            <div class="alert alert-danger mb-3" role="alert">
+                                @foreach (var error in ratingErrors.Errors)
+                                {
+                                    <span class="text-danger">@error.ErrorMessage</span>
+                                }
+                            </div>
+                        }
                     <div class="form-row">
                         <textarea id="Description" class="w-100 h-description" name="Description" asp-for="Description"
                             placeholder="Ecrivez votre message ici" style="height: 120px;"></textarea>
-                        <span asp-validation-for="Description" class="text-danger"></span>
+                       
                     </div>
+                     @if (ViewData.ModelState.TryGetValue("Description", out var descriptionErrors) &&
+                        descriptionErrors.Errors.Any())
+                        {
+                            <div class="alert alert-danger mb-3" role="alert">
+                                @foreach (var error in descriptionErrors.Errors)
+                                {
+                                    <span class="text-danger">@error.ErrorMessage</span>
+                                }
+                            </div>
+                        }
                     <button class="btn btn-pistache mt-5" type="submit">Soumettre</button>
             </form>
         </div>
     </div>
+    <div class="col-12 col-md-6 d-flex justify-content-center ">
+        <img class="" src="https://picsum.photos/id/237/650/620" alt="">
+    </div>
 </div>
-
