--- a/Views/AdminTypeModel/Details.cshtml
+++ b/Views/AdminTypeModel/Details.cshtml
@@ -9,7 +9,7 @@
     <div class="text-center">
 
         <div class="linkcontainer">
-            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+            <a class="btn link" asp-area="" asp-controller="Menu" asp-action="index">Voir le menu</a>
         </div>
 
         <h1>Détail du type</h1>
