--- a/Views/AdminEventModel/Create.cshtml
+++ b/Views/AdminEventModel/Create.cshtml
@@ -26,7 +26,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="description" class="control-label">Description</label>
-                        <input asp-for="description" class="form-control" />
+                        <textarea asp-for="description" class="form-control"></textarea> 
                         <span asp-validation-for="description" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -36,7 +36,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="date" class="control-label">Date</label>
-                        <input asp-for="date" class="form-control" />
+                        <input asp-for="date" class="form-control" type="date" />
                         <span asp-validation-for="date" class="text-danger"></span>
                     </div>
                     <div class="form-group">
