--- a/Views/AdminEventModel/Edit.cshtml
+++ b/Views/AdminEventModel/Edit.cshtml
@@ -27,7 +27,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="description" class="control-label">Description</label>
-                        <input asp-for="description" class="form-control" />
+                        <textarea asp-for="description" class="form-control"></textarea>
                         <span asp-validation-for="description" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -37,7 +37,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="date" class="control-label"></label>
-                        <input asp-for="date" class="form-control" />
+                        <input asp-for="date" class="form-control" type="date" />
                         <span asp-validation-for="date" class="text-danger"></span>
                     </div>
                     <div class="form-group">
