--- a/Views/AdminProductLabelModel/Create.cshtml
+++ b/Views/AdminProductLabelModel/Create.cshtml
@@ -19,12 +19,11 @@
             <div class="col-md-4 mx-auto">
                 <form asp-action="Create">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="form-group">
-                        <label asp-for="ProductId" class="control-label">Id du produit</label>
+                    <div class="form-group">Produit</label>
                         <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
                     </div>
                     <div class="form-group">
-                        <label asp-for="LabelId" class="control-label">Id du label</label>
+                        <label asp-for="LabelId" class="control-label">Label</label>
                         <select asp-for="LabelId" class="form-control" asp-items="ViewBag.LabelId"></select>
                     </div>
                     <div class="form-group">
