--- a/Views/AdminProductLabelModel/Edit.cshtml
+++ b/Views/AdminProductLabelModel/Edit.cshtml
@@ -9,7 +9,7 @@
     <div class="text-center">
 
         <div class="linkcontainer">
-            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+            <a class="btn link" asp-area="" asp-controller="Menu" asp-action="index">Voir le menu</a>
         </div>
 
         <h1>Editer la relation Produit/Label</h1>
@@ -21,13 +21,13 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <input type="hidden" asp-for="Id" />
                     <div class="form-group">
-                        <label asp-for="ProductId" class="control-label">Id du produit</label>
+                        <label asp-for="ProductId" class="control-label">Produit</label>
                         <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
                         <span asp-validation-for="ProductId" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
-                        <label asp-for="LabelId" class="control-label">Id du Label</label>
+                        <label asp-for="LabelId" class="control-label">Label</label>
                         <select asp-for="LabelId" class="form-control" asp-items="ViewBag.LabelId"></select>
                         <span asp-validation-for="LabelId" class="text-danger"></span>
                     </div>
