--- a/Views/AdminProductLabelModel/Index.cshtml
+++ b/Views/AdminProductLabelModel/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="text-center">
 
         <div class="linkcontainer">
-            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+            <a class="btn link" asp-area="" asp-controller="Menu" asp-action="index">Voir le menu</a>
         </div>
 
         <h1>Relations Produit/Label</h1>
@@ -27,24 +27,27 @@
                     <th>
                         Label
                     </th>
-                    <th></th>
+                    <th>
+                        Menu Actions
+                    </th>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model)
+                @foreach (var produit in Model)
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Product.Title)
+                            @Html.DisplayFor(modelItem => produit.Product.Title)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Label.Title)
+                            @Html.DisplayFor(modelItem => produit.Label.Title)
                         </td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-admin">Editer</a>
-                            <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-admin">Détail</a>
-                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-admin">Supprimer</a>
+                            <a asp-action="Edit" asp-route-id="@produit.Id" class="btn btn-admin">Editer</a>
+                            <a asp-action="Details" asp-route-id="@produit.Id" class="btn btn-admin">Détail</a>
+                            <a asp-action="Delete" asp-route-id="@produit.Id" class="btn btn-admin">Supprimer</a>
                         </td>
+                        
                     </tr>
                 }
             </tbody>
