--- a/Views/AdminProductModel/Create.cshtml
+++ b/Views/AdminProductModel/Create.cshtml
@@ -9,7 +9,7 @@
     <div class="text-center">
 
         <div class="linkcontainer">
-            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+            <a class="btn link" asp-area="" asp-controller="Menu" asp-action="index">Voir le menu</a>
         </div>
 
         <h1>Ajouter un produit au menu</h1>
@@ -26,7 +26,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Description" class="control-label">Description</label>
-                        <input asp-for="Description" class="form-control" />
+                        <textarea asp-for="Description" class="form-control"></textarea>
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -41,29 +41,36 @@
                     </div>
                     <div class="form-group form-check">
                         <label class="form-check-label">
-                            <input class="form-check-input" asp-for="IsAvailable" /> @Html.DisplayNameFor(model =>
-                            model.IsAvailable)
+                            <input class="form-check-input" asp-for="IsAvailable" />
+                            Au Menu
                         </label>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Created_at" class="control-label"></label>
-                        <input asp-for="Created_at" class="form-control" />
-                        <span asp-validation-for="Created_at" class="text-danger"></span>
+                        <label asp-for="TypeId" class="control-label">Type</label>
+                        <select asp-for="TypeId" class="form-control" asp-items="ViewBag.TypeId"></select>
                     </div>
+
+                    @* <div class="form-group">
+                        <label class="control-label">Selectionnez le(s) label(s) à attribuer à ce
+                            produit :</label>
+                        <div>
+                            @foreach (var label in ViewBag.LabelId)
+                            {
+                                <input type="checkbox" id="label" name="label" value="@label.Value"/>
+                                <label for="label">@label.Text</label>
+                            }
+                        </div>
+                    </div> *@
+
                     <div class="form-group">
-                        <label asp-for="Updated_at" class="control-label"></label>
-                        <input asp-for="Updated_at" class="form-control" />
-                        <span asp-validation-for="Updated_at" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-admin m-2" />
+                        <input type="submit" value="Créer" class="btn btn-admin m-2" />
                     </div>
                 </form>
             </div>
         </div>
 
         <div>
-            <a asp-action="Index" class="btn btn-admin m-2">Back to List</a>
+            <a asp-action="Index" class="btn btn-admin m-2">Retour</a>
         </div>
     </div>
 </div>
