--- a/Views/AdminReviewModel/Edit.cshtml
+++ b/Views/AdminReviewModel/Edit.cshtml
@@ -9,7 +9,7 @@
     <div class="text-center">
 
         <div class="linkcontainer">
-            <a href="@Url.Action("Menu", "Home")" class="btn link">Voir le menu</a>
+            <a class="btn link" asp-area="" asp-controller="Home" asp-action="index">Retour au site</a>
         </div>
 
         <h1>Editer l'avis</h1>
