fix :bug: fixing css

--- a/Views/Book/Booking.cshtml.css
+++ b/Views/Book/Booking.cshtml.css
@@ -7,6 +7,9 @@
 
 .border-pistache{
     border-color: var(--pistache) !important;
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+
 }
 .bg-terrine{
     background-color: var(--terrine) !important;
@@ -37,3 +40,10 @@ input[type="radio"]:checked + label{
     box-shadow: none;
 }
 
+h2{
+    padding: 0px !important;
+}
+
+.padding-form{
+    padding: 2px !important;
+}
