--- a/Views/Book/Booking.cshtml
+++ b/Views/Book/Booking.cshtml
@@ -3,64 +3,65 @@
 
 <div class="container d-flex justify-content-center">
     <div class="row mb-5">
-        <div class="col-12 col-md6 border border-pistache rounded bg-terrine pb-5">
-            <div class="row text-center pt-3 mb-5 bg-pistache ">
-                <h2>Réservation</h2>
-            </div>
-            <form asp-action="Booking" method="post" class="">
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1">
-                        <label asp-for="date">Sélectionnez une date
-                        </label>
-                    </span>
-                    <input type="date" asp-for="date" class="form-control" placeholder="JJ/MM/AAAA" min='@DateTime.Now.ToString("yyyy-MM-dd")'/>
+        <div class="col-12 col-md-6 border border-pistache rounded bg-terrine pb-5 pr-0">
+            <div class="p-2">
+                <div class="text-center pt-3 mb-5 bg-pistache ">
+                    <h2>Réservation</h2>
                 </div>
-                @if (ViewData.ModelState.TryGetValue("date", out var dateErrors) && dateErrors.Errors.Any())
-                {
-                    <div class="alert alert-danger mb-3" role="alert">
-                        @foreach (var error in dateErrors.Errors)
-                        {
-                            <span class="text-danger">@error.ErrorMessage</span>
-                        }
+                <form asp-action="Booking" method="post" class="padding-form">
+                    <div class="input-group mb-3 w-75">
+                        <span class="input-group-text" id="basic-addon1">
+                            <label asp-for="date">Date
+                            </label>
+                        </span>
+                        <input type="date" asp-for="date" class="form-control" placeholder="JJ/MM/AAAA" min='@DateTime.Now.ToString("yyyy-MM-dd")'/>
                     </div>
-                }
+                    @if (ViewData.ModelState.TryGetValue("date", out var dateErrors) && dateErrors.Errors.Any())
+                    {
+                        <div class="alert alert-danger mb-3" role="alert">
+                            @foreach (var error in dateErrors.Errors)
+                            {
+                                <span class="text-danger">@error.ErrorMessage</span>
+                            }
+                        </div>
+                    }
 
 
-                <div>
-                    <div class="btn-group mb-4" role="group" aria-label="Basic radio toggle button group">
-                        <input type="radio" id="btnradio1" class="btn-check " asp-for="time" value="11:00:00" autocomplete="off" required/>
-                        <label class="btn btn-outline-cacahuete" for="btnradio1">
-                            11h-12h</label>
+                    <div>
+                        <div class="btn-group mb-5" role="group" aria-label="Basic radio toggle button group">
+                            <input type="radio" id="btnradio1" class="btn-check " asp-for="time" value="11:00:00" autocomplete="off" required/>
+                            <label class="btn btn-outline-cacahuete" for="btnradio1">
+                                11h-12h</label>
 
-                        <input type="radio" id="btnradio2" class="btn-check " asp-for="time" value="12:00:00" autocomplete="off" required/>
-                        <label class="btn btn-outline-cacahuete" for="btnradio2">12h-13h</label>
+                            <input type="radio" id="btnradio2" class="btn-check " asp-for="time" value="12:00:00" autocomplete="off" required/>
+                            <label class="btn btn-outline-cacahuete" for="btnradio2">12h-13h</label>
 
-                        <input type="radio" id="btnradio3" class="btn-check " asp-for="time" value="13:00:00" autocomplete="off" required/>
-                        <label class="btn btn-outline-cacahuete" for="btnradio3">13h-14h</label>
+                            <input type="radio" id="btnradio3" class="btn-check " asp-for="time" value="13:00:00" autocomplete="off" required/>
+                            <label class="btn btn-outline-cacahuete" for="btnradio3">13h-14h</label>
+                        </div>
+
+                        <div class="btn-group mb-5" role="group" aria-label="Basic radio toggle button group">
+                            <input type="radio" id="btnradio4" class="btn-check " asp-for="time" value="18:00:00" autocomplete="off" required/>
+                            <label class="btn btn-outline-cacahuete" for="btnradio4">
+                                18h-19h</label>
+
+                            <input type="radio" id="btnradio5" class="btn-check " asp-for="time" value="19:00:00" autocomplete="off" required/>
+                            <label class="btn btn-outline-cacahuete" for="btnradio5">19h-20h</label>
+
+                            <input type="radio" id="btnradio6" class="btn-check " asp-for="time" value="20:00:00" autocomplete="off" required/>
+                            <label class="btn btn-outline-cacahuete" for="btnradio6">20h-21h</label>
+
+                        </div>
+                        <span asp-validation-for="time" class="text-danger field-validation-error"></span>
                     </div>
 
-                    <div class="btn-group mb-4" role="group" aria-label="Basic radio toggle button group">
-                        <input type="radio" id="btnradio4" class="btn-check " asp-for="time" value="18:00:00" autocomplete="off" required/>
-                        <label class="btn btn-outline-cacahuete" for="btnradio4">
-                            18h-19h</label>
 
-                        <input type="radio" id="btnradio5" class="btn-check " asp-for="time" value="19:00:00" autocomplete="off" required/>
-                        <label class="btn btn-outline-cacahuete" for="btnradio5">19h-20h</label>
-
-                        <input type="radio" id="btnradio6" class="btn-check " asp-for="time" value="20:00:00" autocomplete="off" required/>
-                        <label class="btn btn-outline-cacahuete" for="btnradio6">20h-21h</label>
-
+                    <div class="input-group mb-3 w-75">
+                        <span class="input-group-text" id="basic-addon1">
+                            <label for="name">Nom</label>
+                        </span>
+                        <input type="text" class="form-control" placeholder="Nom" aria-label="name" aria-describedby="basic-addon1" asp-for="name">
                     </div>
-                    <span asp-validation-for="time" class="text-danger field-validation-error"></span>
-                </div>
-
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1">
-                        <label for="name">Nom</label>
-                    </span>
-                    <input type="text" class="form-control" placeholder="Nom" aria-label="name" aria-describedby="basic-addon1" asp-for="name">
-                     </div>
                     @if (ViewData.ModelState.TryGetValue("name", out var nameError) && nameError.Errors.Any())
                     {
                         <div class="alert alert-danger mb-3" role="alert">
@@ -70,14 +71,14 @@
                             }
                         </div>
                     }
-               
 
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1">
-                        <label for="">Numéro de téléphone</label>
-                    </span>
-                    <input type="text" class="form-control" placeholder="Numéro de téléphone" aria-label="phoneNumber" aria-describedby="basic-addon1" asp-for="phoneNumber">
-                     </div>
+
+                    <div class="input-group mb-3 w-75">
+                        <span class="input-group-text" id="basic-addon1">
+                            <label for="">Téléphone</label>
+                        </span>
+                        <input type="text" class="form-control" placeholder="Numéro de téléphone" aria-label="phoneNumber" aria-describedby="basic-addon1" asp-for="phoneNumber">
+                    </div>
                     @if (ViewData.ModelState.TryGetValue("phoneNumber", out var phoneNumberError) && phoneNumberError.Errors.Any())
                     {
                         <div class="alert alert-danger mb-3" role="alert">
@@ -87,13 +88,13 @@
                             }
                         </div>
                     }
-               
 
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1">
-                        <label for="seats">Nombre de personne</label>
-                    </span>
-                    <input type="text" class="form-control" placeholder="Nombre de personne" aria-label="seats" aria-describedby="basic-addon1" asp-for="seats">
+
+                    <div class="input-group mb-5 w-75">
+                        <span class="input-group-text" id="basic-addon1">
+                            <label for="seats">Couverts</label>
+                        </span>
+                        <input type="number" min="0" max="10" class="form-control" placeholder="Nombre de personne" aria-label="seats" aria-describedby="basic-addon1" asp-for="seats">
                     </div>
                     @if (ViewData.ModelState.TryGetValue("seats", out var seatsError) && seatsError.Errors.Any())
                     {
@@ -104,15 +105,21 @@
                             }
                         </div>
                     }
-                
-                @if (TempData["SuccessMessage"] != null)
-                {
-                    <div class="alert alert-success" role="alert">
-                        @TempData["SuccessMessage"]
-                    </div>
-                }
-                <button type="submit" class="btn btn-pistache">Envoyer</button>
-            </form>
+
+                    @if (TempData["SuccessMessage"] != null)
+                    {
+                        <div class="alert alert-success" role="alert">
+                            @TempData["SuccessMessage"]
+                        </div>
+                    }
+                    <button type="submit" class="btn btn-pistache">Envoyer</button>
+                </form>
+            </div>
+
+
+        </div>
+        <div class="col-12 col-md-6">
+            <img class="img-fluid" src="https://picsum.photos/id/292/650/620" alt="">
         </div>
     </div>
 
