style: :art: design homepage

--- a/Views/Home/_Team.cshtml
+++ b/Views/Home/_Team.cshtml
@@ -25,24 +25,21 @@
 				<div id="carouselTeam" class="carousel slide carousel-fade" data-bs-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="https://picsum.photos/seed/cuisine/640/600" class="d-block w-100 img-fluid"
-								alt="...">
+							<img src="img/chefcuistot.jfif" class="d-block w-100 img-fluid" alt="...">
 							<div class="carousel-caption d-none d-md-block">
-								<h5>First slide label</h5>
+								<h5>Rémi, notre chef Patéssier</h5>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="https://picsum.photos/seed/equipe/640/600" class="d-block w-100 img-fluid"
-								alt="...">
+							<img src="img/thierry.jfif" class="d-block w-100 img-fluid" alt="...">
 							<div class="carousel-caption d-none d-md-block">
-								<h5>Second slide label</h5>
+								<h5>Thierry, notre sommelier</h5>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="https://picsum.photos/seed/baston/640/600" class="d-block w-100 img-fluid"
-								alt="...">
+							<img src="img/camille.jfif" class="d-block w-100 img-fluid" alt="...">
 							<div class="carousel-caption d-none d-md-block">
-								<h5>Third slide label</h5>
+								<h5>Camille, notre serveuse</h5>
 							</div>
 						</div>
 					</div>
@@ -62,3 +59,5 @@
 	</div>
 
 </div>
+<h3 class="titre-section">Terrine attendrie<br>Bonne compagnie<br>Goûts en symphonie</h3>
+<img class="image-section img-fluid w-100" src="img\croute.jpg" class="img-fluid" alt="...">
