--- a/Views/Shared/Footer/_Footer-review.cshtml
+++ b/Views/Shared/Footer/_Footer-review.cshtml
@@ -60,6 +60,6 @@ else
 {
     <h1>Il n'y a pas de commentaires.</h1>
 }
-        <button class="btn btn-pistache mt-2 w-50" onclick="@("window.location.href='" + @Url.Action("Review", "Review") + "'");">Donnez son avis</button>
+        <button class="btn btn-pistache mt-2 w-50" onclick="@("window.location.href='" + @Url.Action("Review", "Review") + "'");">Donner son avis</button>
         
     </div>
