feat: add booking admin pages

--- a/Views/Admin/index.cshtml
+++ b/Views/Admin/index.cshtml
@@ -2,3 +2,9 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
     ViewData["Title"] = "Admin Dashboard";
 }
+<div class="homeadmin">
+    <img class="homeadminimg"
+        src="https://cdn.pratico-pratiques.com/app/uploads/sites/2/2018/08/27230408/rillettes-de-canard.jpeg" alt"pate">
+    <img src="~/img/logo-dark.webp" class="img-fluid "
+        style="max-width: 11rem; padding-block: 1rem; margin-inline: 1rem;">
+</div>
