--- a/Views/AdminEventModel/Create.cshtml
+++ b/Views/AdminEventModel/Create.cshtml
@@ -9,7 +9,7 @@
     <div class="text-center">
 
         <div class="linkcontainer">
-            <a href="@Url.Action("Events", "Home")" class="btn link">Voir les évènements</a>
+            <a class="btn link" asp-area="" asp-controller="Home" asp-action="index">Retour au site</a>
         </div>
 
         <h1>Ajouter un évènement</h1>
