--- a/Views/AdminBookingModel/Delete.cshtml
+++ b/Views/AdminBookingModel/Delete.cshtml
@@ -1,4 +1,4 @@
-@model LaCroute.Models.EventModel
+@model LaCroute.Models.BookingModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -12,35 +12,42 @@
             <a class="btn link" asp-area="" asp-controller="Home" asp-action="index">Retour au site</a>
         </div>
 
-        <h1>Supprimer l'évènement</h1>
+        <h1>Supprimer la réservation</h1>
 
-        <h2>Etes-vous sur de vouloir supprimer cet évènement ?</h2>
+        <h2>Etes-vous sur de vouloir supprimer cette réservation ?</h2>
+
         <div>
             <hr />
             <dl class="row">
-                <dt class="col-sm-2">
-                    Intitulé
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.title)
-                </dd>
-                <dt class="col-sm-2">
-                    Description
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.description)
-                </dd>
-                <dt class="col-sm-2">
-                    Photo
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.thumbnail)
-                </dd>
                 <dt class="col-sm-2">
                     Date
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.date)
+                </dd>
+                <dt class="col-sm-2">
+                    Heure
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.time)
+                </dd>
+                <dt class="col-sm-2">
+                    Prénom Nom
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.name)
+                </dd>
+                <dt class="col-sm-2">
+                    Numéro de téléphone
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.phoneNumber)
+                </dd>
+                <dt class="col-sm-2">
+                    Nombre de couverts
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.seats)
                 </dd>
                 <dt class="col-sm-2">
                     Date de création
@@ -49,7 +56,7 @@
                     @Html.DisplayFor(model => model.created_at)
                 </dd>
                 <dt class="col-sm-2">
-                    Date de mise à jour
+                    Date de modification
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.updated_at)
@@ -58,7 +65,7 @@
 
             <form asp-action="Delete">
                 <input type="hidden" asp-for="id" />
-                <input type="submit" value="Supprimer" class="btn btn-admin" />
+                <input type="submit" value="Supprimer" class="btn btn-admin" /> 
                 <a asp-action="Index" class="btn btn-admin">Retour</a>
             </form>
         </div>
