--- a/Views/AdminProductModel/Create.cshtml
+++ b/Views/AdminProductModel/Create.cshtml
@@ -31,7 +31,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Price" class="control-label">Prix</label>
-                        <input asp-for="Price" class="form-control" />
+                        <input asp-for="Price" class="form-control" type="number" />
                         <span asp-validation-for="Price" class="text-danger"></span>
                     </div>
                     <div class="form-group">
