fix: update seed data

--- a/Views/Admin/index.cshtml
+++ b/Views/Admin/index.cshtml
@@ -2,6 +2,11 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
     ViewData["Title"] = "Admin Dashboard";
 }
+
+        <div class="linkcontainer">
+            <a class="btn link" asp-area="" asp-controller="Home" asp-action="index">Retour au site</a>
+        </div>
+        
 <div class="homeadmin">
     <img class="homeadminimg"
         src="https://cdn.pratico-pratiques.com/app/uploads/sites/2/2018/08/27230408/rillettes-de-canard.jpeg" alt"pate">
